tried fixing weird gap

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ p, h1, h2, h3, h4, h5, h6, img {
   width: 40%;
   height: 40%;
   float: right;
+  padding-left: 20px;
+  padding-right: 0px
 }
 
 .lists {
@@ -114,6 +116,9 @@ border-radius: 12px;
   justify-content: right;
   float: right;
   width: 20%;
+  padding-right: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px
 }
 
 .item {
